fix navbar spacing

--- a/static/master.css
+++ b/static/master.css
@@ -99,14 +99,13 @@ header h3 {
 }
 nav {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     padding-top: 10px;
     max-width: 600px;
     margin: auto;
 }
 nav > * {
     padding: 8px 10px;
-    margin-inline: 10px;
     border-radius: 10px;
 }
 nav > *:hover {
